THRIFT-3293 JavaScript: null values turn into empty structs in constructor Patch: Håkon Hitland